fixed user validation method  userStore.getUserGroupMapping();